prevent overflow of placeholder img

--- a/public/index.css
+++ b/public/index.css
@@ -186,9 +186,13 @@ STREAM SECTION
     align-items: stretch;
     height: 100%;
     max-height: 100vh;
+    max-width: 100%;
     animation: fade-in 1s ease-in-out 2s;    
     animation-fill-mode: both;
   }
+    .stream .stream--media img{
+      max-width: 100%;
+    }
 
   .stream .stream--placeholder{
     height: 100%;
